--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_HOST= silly.db.elephantsql.com
 DB_PORT= 5432
 DB_USER= jnetlxsj
 DB_PASSWORD= 8edgbrGQciXoRD72MlTFGqUnuD_z968P
-DB_NAME= 5432
+DB_NAME= jnetlxsj
 
