--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/typeorm": "^10.0.0",
+    "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -50,6 +51,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "install": "^0.13.0",
     "jest": "^29.5.0",
+    "nodemon": "^3.0.1",
     "npm": "^10.1.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
